# Compro-By-P-----

./: README.md  comprotest (1).ipynb  main.py  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/public/: app.js  index.html
frontend/src/: api.ts  server.ts
web_ui/: README.md  index.html
web_ui/backend/: app.py
