[project]
name = "compro"
version = "0.1.0"
description = "OX Game Winner Checker - Full Stack"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==2.3.3",
    "flask-cors==4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.uv]
python-version = "3.8"
